--- a/src/components/layout/HeroBanner.astro
+++ b/src/components/layout/HeroBanner.astro
@@ -20,7 +20,7 @@ const { src: backgroundImageWebp } = await getImage({
 })
 ---
 
-<div class="banner" style={`background-image: url(${backgroundImageWebp});`}>
+<div class="banner lsa no-repeat" style={`background-image: url(${backgroundImageWebp});`}>
   <div class="scrim"></div>
   <PageHeader title={title} />
   {description && <p>{description}</p>}
