--- a/src/components/pages/home/Info.astro
+++ b/src/components/pages/home/Info.astro
@@ -2,8 +2,8 @@
 import { Picture } from 'astro:assets'
 import fareShareFood from '../../../assets/fare-share-food.webp'
 import goodFoodBethel from '../../../assets/good-food-bethel.png'
-import mountainSocial from '../../../assets/mountain-social.webp'
 import morningGloryFarm from '../../../assets/morning-glory-farm.png'
+import mountainSocial from '../../../assets/mountain-social.webp'
 import tableBar from '../../../assets/table-bar.jpg'
 
 const companyData = [
@@ -35,7 +35,7 @@ const companyData = [
 ]
 ---
 
-<section id="info" class="info">
+<section id="info" class="info lsa no-repeat">
   <h3>Retailers</h3>
   <div class="info-logos">
     {
