--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,4 @@
 ---
-import { ViewTransitions } from 'astro:transitions'
 import Splash from '../components/Splash.astro'
 import Footer from '../components/layout/Footer.astro'
 import Navigation from '../components/layout/navigation/Navigation.astro'
@@ -77,37 +76,62 @@ const socialImageURL = new URL('/sprouted-rye.png', canonicalURL)
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff5758" />
     <meta name="msapplication-TileColor" content="#f0f9ff" />
     <meta name="theme-color" content="#f0f9ff" />
-
-    <!-- Animations -->
-    <ViewTransitions />
   </head>
+
   <body data-overlay-displayed="false">
     <Splash />
     <header>
       <Navigation />
     </header>
-    <div class="site-wrapper">
-      <slot />
-      <Footer />
-    </div>
-    <style>
-      .site-wrapper {
-        transition: opacity var(--transition-long);
-        opacity: 0;
-      }
-
-      .site-wrapper.active {
-        opacity: 1;
-      }
-    </style>
-
-    <script>
-      function handleContentFadeIn() {
-        const siteWrapper = document.querySelector('.site-wrapper')
-        siteWrapper?.classList.add('active')
-      }
-
-      document.addEventListener('astro:page-load', handleContentFadeIn)
-    </script>
+    <slot />
+    <Footer />
   </body>
 </html>
+
+<script>
+  /**
+   * Animate sections with the class `lsa` when they come into view
+   */
+  function handleAnimations() {
+    if (!window.IntersectionObserver) {
+      return console.log('IntersectionObserver not supported')
+    }
+
+    // Grab all sections to be animated
+    const sections = document.querySelectorAll('.lsa')
+
+    // Configure observer options
+    if (sections.length !== 0) {
+      const options = {
+        root: null,
+        rootMargin: '0px',
+        threshold: 0.1,
+      }
+
+      // Initialize observer
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach((entry) => {
+          const section = entry.target
+
+          // By default, animations repeat on scroll unless the section has the class `no-repeat`
+          if (entry.isIntersecting) {
+            section.classList.add('active')
+          } else if (!entry.isIntersecting && !section.classList.contains('no-repeat')) {
+            section.classList.remove('active')
+          }
+        })
+      }, options)
+
+      // Observe each section with the class `lsa`
+      sections.forEach((section) => observer.observe(section))
+    }
+  }
+
+  // Handle animations on page load
+  document.addEventListener('DOMContentLoaded', () => {
+    handleAnimations()
+
+    // Handle animations on scroll
+    document.addEventListener('scroll', handleAnimations)
+  })
+</script>
