--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -115,7 +115,7 @@ const menuItems = {
   />
   <main>
     <section id="menu" class="menu">
-      <div class="menu-category">
+      <div class="menu-category lsa no-repeat">
         <h2>Bread</h2>
         <ul>
           {
@@ -128,7 +128,7 @@ const menuItems = {
           }
         </ul>
       </div>
-      <div class="menu-category">
+      <div class="menu-category lsa no-repeat">
         <h2>Pastries</h2>
         <ul>
           {
@@ -141,7 +141,7 @@ const menuItems = {
           }
         </ul>
       </div>
-      <div class="menu-category">
+      <div class="menu-category lsa no-repeat">
         <h2>CSA (Morning Glory Farm + New Spoke Farm)</h2>
         <ul>
           {
@@ -154,7 +154,7 @@ const menuItems = {
           }
         </ul>
       </div>
-      <div class="menu-category">
+      <div class="menu-category lsa no-repeat">
         <h2>Weekly Subscription</h2>
         <ul>
           {
@@ -167,7 +167,8 @@ const menuItems = {
           }
         </ul>
       </div>
-      <a href="https://bornyesterdaybakery.square.site/" class="site-cta">Order Now</a>
+      <a href="https://bornyesterdaybakery.square.site/" class="site-cta lsa no-repeat">Order Now</a
+      >
     </section>
   </main>
 </Layout>
