--- a/src/pages/order.astro
+++ b/src/pages/order.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro'
+import sproutedRyeImage from '../assets/sprouted-rye.jpg'
 import HeroBanner from '../components/layout/HeroBanner.astro'
 import SectionHeader from '../components/text/SectionHeader.astro'
-import sproutedRyeImage from '../assets/sprouted-rye.jpg'
+import Layout from '../layouts/Layout.astro'
 ---
 
 <Layout
@@ -12,7 +12,7 @@ import sproutedRyeImage from '../assets/sprouted-rye.jpg'
   <HeroBanner title="Order" image={sproutedRyeImage} />
   <main>
     <SectionHeader title="Visit our online store" />
-    <a href="https://bornyesterdaybakery.square.site/" class="site-cta">Order Now</a>
+    <a href="https://bornyesterdaybakery.square.site/" class="site-cta lsa no-repeat">Order Now</a>
   </main>
 </Layout>
 
