--- a/src/components/text/SectionHeader.astro
+++ b/src/components/text/SectionHeader.astro
@@ -7,7 +7,7 @@ export interface Props {
 const { title, class: className } = Astro.props
 ---
 
-<h2 class={className}>{title}</h2>
+<h2 class={`${className} lsa no-repeat`}>{title}</h2>
 
 <style>
   h2 {
