--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -88,7 +88,7 @@ const socialImageURL = new URL('/sprouted-rye.png', canonicalURL)
   </body>
 </html>
 
-<script>
+<script is:inline data-astro-rerun>
   /**
    * Animate sections with the class `lsa` when they come into view
    */
