initial sourcing page boilerplate + setup

--- a/src/components/layout/navigation/Mobile.astro
+++ b/src/components/layout/navigation/Mobile.astro
@@ -10,8 +10,8 @@ import { Icon } from 'astro-icon/components'
 
 <div class="mobile-nav-overlay">
   <ul>
-    <li><a href="/" aria-label="home">Home</a></li>
-    <li><a href="/menu" aria-label="menu">Menu</a></li>
+    <li><a href="/menu">Menu</a></li>
+    <li><a href="/sourcing">Sourcing</a></li>
     <li><a href="https://bornyesterdaybakery.square.site/" aria-label="order">Order</a></li>
     <li><a href="/contact" aria-label="contact">Contact</a></li>
     <div class="icons">
