--- a/src/components/layout/navigation/Desktop.astro
+++ b/src/components/layout/navigation/Desktop.astro
@@ -5,8 +5,8 @@ const currentPath = Astro.url.pathname
 ---
 
 <ul class="desktop-nav" data-current-url={currentPath}>
-  <li data-path="home"><a href="/">Home</a></li>
   <li data-path="menu"><a href="/menu">Menu</a></li>
+  <li data-path="sourcing"><a href="/sourcing">Sourcing</a></li>
 
   <li class="logo">
     <DesktopLogo />
@@ -17,8 +17,8 @@ const currentPath = Astro.url.pathname
 </ul>
 
 <style>
-  .desktop-nav[data-current-url='/'] li[data-path='home'],
   .desktop-nav[data-current-url^='/menu'] li[data-path='menu'],
+  .desktop-nav[data-current-url^='/sourcing'] li[data-path='sourcing'],
   .desktop-nav[data-current-url^='/order'] li[data-path='order'],
   .desktop-nav[data-current-url^='/contact'] li[data-path='contact'] {
     color: var(--color-primary);
