--- a/src/pages/success.astro
+++ b/src/pages/success.astro
@@ -12,8 +12,10 @@ import Layout from '../layouts/Layout.astro'
   <HeroBanner title="Success" image={breadSunflowerImage} />
   <main>
     <section id="success" class="success lsa no-repeat">
-      <SectionHeader title="Thank you for your message" class="section-header" />
-      <p>We will get back to you as soon as we can!</p>
+      <SectionHeader
+        title="Thank you for your message"
+        description="We will get back to you as soon as we can!"
+      />
       <a class="site-cta" href="/">Back to home</a>
     </section>
   </main>
