--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,12 @@
 ---
 import anadamaImage from '../assets/anadama.jpg'
 import HeroBanner from '../components/layout/HeroBanner.astro'
-import About from '../components/pages/home/About.astro'
-import Info from '../components/pages/home/Info.astro'
+import SectionHeader from '../components/text/SectionHeader.astro'
+import Button from '../components/ui/Button.astro'
+import CompanyHours from '../components/ui/CompanyHours.astro'
+import CompanyLogos from '../components/ui/CompanyLogos.astro'
+import FlashingImages from '../components/ui/FlashingImages.astro'
+import GoogleMap from '../components/ui/GoogleMap.astro'
 import Layout from '../layouts/Layout.astro'
 ---
 
@@ -16,7 +20,50 @@ import Layout from '../layouts/Layout.astro'
     description="Where everything is sourdough and sourdough is everything"
   />
   <main>
-    <About />
-    <Info />
+    <!-- About Us -->
+    <section id="about" class="about">
+      <SectionHeader
+        title="About Us"
+        description="Born Yesterday is a small bakery in Western Maine making sourdough baked goods, with a focus on organic, local and whole grains. We see bread as a handmade product that is wildly crafted, using our hands, bodies and minds. A lot of cool 😎 fermentation goes on here and half of it is controlled by those hands and minds, but the other half is just food doing its thing. Hope you like us doing our thing and find something tasty here."
+      />
+      <FlashingImages />
+      <Button text="Our Sourcing Story" isLink={true} href="/sourcing" class="button-custom" />
+      <CompanyHours />
+    </section>
+
+    <!-- Company Info -->
+    <section id="info" class="info lsa no-repeat">
+      <h3>Retailers</h3>
+      <CompanyLogos />
+
+      <h3>Where to find us</h3>
+      <GoogleMap
+        locationSrc="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2850.281362319046!2d-70.85805432360414!3d44.4068718033606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cb3c367e4526135%3A0x6d53830088590b45!2s221%20Barker%20Rd%2C%20Bethel%2C%20ME%2004217!5e0!3m2!1sen!2sus!4v1696450333368!5m2!1sen!2sus"
+        title="Google Map of 221 Barker Rd, Bethel, ME 04217"
+      />
+    </section>
   </main>
 </Layout>
+
+<style>
+  .about {
+    border-bottom: 1px solid var(--color-grey);
+  }
+
+  .about .button-custom {
+    display: block;
+    width: fit-content;
+    margin: 0 auto 4em;
+  }
+
+  .info h3 {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+
+  @media (min-width: 768px) {
+    .info h3 {
+      font-size: var(--size-lg);
+    }
+  }
+</style>
