--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -2,6 +2,7 @@
 import seasonalGalettesImage from '../assets/seasonal-galettes.jpeg'
 import HeroBanner from '../components/layout/HeroBanner.astro'
 import SectionHeader from '../components/text/SectionHeader.astro'
+import Button from '../components/ui/Button.astro'
 import Layout from '../layouts/Layout.astro'
 
 // Can these be imported from Square?
@@ -168,8 +169,7 @@ const menuItems = {
           }
         </ul>
       </div>
-      <a href="https://bornyesterdaybakery.square.site/" class="site-cta lsa no-repeat">Order Now</a
-      >
+      <Button text="Order Now" isLink={true} href="https://bornyesterdaybakery.square.site/" />
     </section>
   </main>
 </Layout>
@@ -230,16 +230,6 @@ const menuItems = {
   @media (min-width: 768px) {
     .menu-category li span {
       font-size: var(--size-sm);
-    }
-  }
-
-  .menu a {
-    font-size: var(--size-sm);
-  }
-
-  @media (min-width: 768px) {
-    .menu a {
-      font-size: var(--size-base);
     }
   }
 </style>
