--- a/src/components/ui/GoogleMap.astro
+++ b/src/components/ui/GoogleMap.astro
@@ -35,6 +35,6 @@ const { locationSrc, title } = Astro.props
     width: 100%;
     height: 100%;
     border: 0;
-    border-radius: 0.25rem;
+    border-radius: var(--border-radius-image);
   }
 </style>
