feat(app): Build 'farms' section

--- a/src/components/text/SectionHeader.astro
+++ b/src/components/text/SectionHeader.astro
@@ -20,6 +20,7 @@ const { title, description, class: className } = Astro.props
     align-items: center;
     gap: 2rem;
     max-width: 750px;
+    margin: 0 auto;
     text-align: center;
   }
 
